--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web developer protfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/protfolio.css">
 </head>
-<body>
-    <header>
-
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+            <h3 class="nav-tittle">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a class="dark-2" href="">Protfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a class="dark-2" href=""><button class="btn-primary">Hire me</button></a></li>
+            </ul>
+        </nav>
+        <div class="bannar">
+            <div class="bannar-contant">
+                <h4 class="bannar-greetings">Hi, I  am</h4>
+                <h1 class="bannar-tittle">Mary Hardy</h1>
+                <p class="bannar-description">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                </p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="bannar-profle-pic" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
