added footer images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="bannar">
             <div class="bannar-contant">
                 <h4 class="bannar-greetings">Hi, I  am</h4>
-                <h1 class="bannar-tittle">Mary Hardy</h1>
+                <h1 class="bannar-tittle">Chondon Roy</h1>
                 <p class="bannar-description">
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
@@ -91,11 +91,11 @@
             </section>
  
                <div class="section-resume">
-                <h3 class="section-tittle">A summary of My Resume</h3>
+                <h3 class="section-tittle text-center">A summary of My Resume</h3>
                 <div class="resume-container">
                 <!--  .resume-column*2>h3.resume-column-tittle+.experience*3>h4.experience-tittle+h5.experience-sub-tittle+.experience-discription -->
                 <div class="resume-column">
-                    <h3 class="resume-column-tittle">My Education</h3>
+                    <h3 class="resume-column-tittle tex">My Education</h3>
                     <div class="experience">
                         <h4 class="experience-tittle">Master in Computer Engineering</h4>
                         <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
@@ -143,11 +143,30 @@
                 </div>
                 </div>
                </div> 
-               <div class="text-center">
+               <div class=" resume-download-cv text-center">
                 <button class="btn-primary">Download CV</button>
     </main>
-               </div>
-    <footer></footer>
+                
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="fotter-tittle">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-fotter-tittle">Let’s Message me</h3>
+            <form action="">
+                <input type="text" placeholder="your name">
+                <input type="email" name="" id="" placeholder="email">
+                <textarea name="" id="" cols="30" rows="20" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
+        </div>
+    </footer>
  
 </body>
 </html>
